Added styling to the page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
   <title>Etch-A-Sketch</title>
 </head>
 <body>
+  <header>
+    <h1>Etch-a-sketch!</h1>
+    <div>
+      <span>Grid Size: </span>
+      <input type="number" id="sizeInput" placeholder="Enter grid size (e.g. 10)">
+      <span>Color: </span>
+      <input type="color" id="colorPicker" value="#000000">
 
-  
+    </div>
+    
+  </header>
+
     <div id="container"></div>
 
   
