Added color and grid size input options

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Etch-a-sketch!</h1>
     <div>
       <span>Grid Size: </span>
-      <input type="number" id="sizeInput" placeholder="Enter grid size (e.g. 10)">
+      <input type="number" id="sizeInput" value="16" placeholder="Enter grid size (e.g. 10)">
       <span>Color: </span>
       <input type="color" id="colorPicker" value="#000000">
 
