Added an eraser feature

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
   <title>Etch-A-Sketch</title>
@@ -15,6 +16,8 @@
       <input type="number" id="sizeInput" value="16" placeholder="Enter grid size (e.g. 10)">
       <span>Color: </span>
       <input type="color" id="colorPicker" value="#000000">
+      <span>Eraser:  </span>
+      <i class="fa-solid fa-eraser"></i>
 
     </div>
     
