Fixed brush bug

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <input type="color" id="colorPicker" value="#000000">
       <span>Eraser:  </span>
       <i class="fa-solid fa-eraser"></i>
+      <span>Brush:  </span>
+      <i class="fa-solid fa-brush"></i>
 
     </div>
     
